--- a/game/package.json
+++ b/game/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@babylonjs/core": "^7.0.0",
     "@babylonjs/gui": "^7.0.0",
-    "@babylonjs/serializers": "^7.0.0",
     "@babylonjs/gui-editor": "^7.0.0",
     "@babylonjs/inspector": "^7.0.0",
     "@babylonjs/loaders": "^7.0.0",
-    "@babylonjs/materials": "^7.0.0"
+    "@babylonjs/materials": "^7.0.0",
+    "@babylonjs/serializers": "^7.0.0",
+    "spectorjs": "^0.9.30"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.6.0",
